# axcelium

./: .env.dev  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.Docker.md  README.md  compose.dev.yaml  compose.yaml  config.yaml  d.txt
database/: clean_axcelium.sql  clear_apporg.sql  clear_user.sql  dbcache.dbs  dbcache.dbs.bak  get_username.sql  table.cql  table.sql  ฟ.dbs  ฟ.dbs.bak
sql/tables/: users.sql
src/: container.rs  create_app.rs  create_router.rs  init_application.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/controllers/: cdc.rs  hello_handle.rs  mod.rs  refresh_token_handle.rs  role_handle.rs  user_handle.rs
src/application/dto/: hello_dto.rs  mod.rs  user_dto.rs
src/application/mappers/: application.rs  mod.rs  model.rs
src/application/middlewares/: bearer_auth.rs
src/application/repositories/: initial_core.rs  mod.rs  user_repository.rs  validate_bearer_auth_repository.rs
src/application/services/: hello_service.rs  initial_core_service.rs  mod.rs  user_service.rs  validate_bearer_auth_service.rs
src/config/: mod.rs
src/controllers/: cdc.rs  consumers.rs  hello.rs  mod.rs  refresh_token.rs  roles.rs  users.rs
src/domain/: mod.rs
src/domain/entities/: application.rs  apporg_client_id.rs  mod.rs  organization.rs  refresh_token.rs  role_by_app.rs  role_user_by_role.rs  role_user_by_user.rs  user.rs  user_organization.rs
src/domain/errors/: middleware_errors.rs  mod.rs  repositories_errors.rs
src/domain/models/: app_config.rs  application_models.rs  apporg_client_id_models.rs  hello_models.rs  mod.rs  organization_models.rs  user_models.rs
src/domain/value_objects/: app_config.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: applications_organization_by_client_id_repository.rs  mod.rs  redis.rs
src/infrastructure/cache_layer/: applications_organization_by_client_id_repository.rs
src/infrastructure/cipher/: aes_gcm_repository.rs  base64_repository.rs  mod.rs
src/infrastructure/database/: application_repository.rs  applications_organization_by_client_id_repository.rs  mariadb.rs  mod.rs  organization_repository.rs  scylladb.rs  user_repository.rs
src/infrastructure/errors/: fulltext_search.rs  mod.rs  queue.rs
src/infrastructure/models/: application.rs  apporg_client_id.rs  mod.rs  organization.rs  refresh_token.rs  role.rs  scylla_serialize.rs  timestamp.rs  token_claim.rs  (+3 more)
src/routes/: hello.rs  mod.rs  refresh_token.rs  roles.rs  users.rs
src/setup/: init_controllers.rs  middlewares.rs  mod.rs  print.rs  repositories.rs  services.rs  shutdown.rs
src/tests/: mod.rs  users_service_test.rs
(+145 files in other folders)
