[package]
name = "axcelium"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.84"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
redis = "0.27"
tokio = { version = "1.12", features = ["full"] }
argon2 = "0.5"
scylla = "1.1"
futures = "0.3.6"
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
chrono = "0.4.40"

[dependencies.uuid]
version = "1.11.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
