[package]
name = "axcelium"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-trait = "0.1.84"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.30", features = ["cluster-async", "tokio-comp"] }
tokio = { version = "1.12", features = ["full"] }
argon2 = "0.5"
scylla = "1.1"
futures = "0.3.6"
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
chrono = "0.4.40"
futures-util = "0.3.31"
base64 = "0.22.1"
serde_json = "1.0.140"
aes-gcm = "0.10.3"
rand = "0.9.1"
rand_core = "0.9.3"
validator ={ version =  "0.20.0", features = ["derive"]}
serde_yaml = "0.9.34"
config = "0.15.11"
regex = "1.11.1"
email_address = "0.2.9"
mockall = "0.13.1"
rusty_paseto = "0.7.2"
time = "0.3.41"
kafka = "0.10.0"
scylla-cdc = "0.4.0"
anyhow = "1.0.98"
elasticsearch = "9.0.0-alpha.1"
thiserror = "2"
[dependencies.uuid]
version = "1.11.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde"
]
